# rasterizer

./: CMakeLists.txt  README.md  flake.nix  package.nix
src/: BoundingBox.h  Color.h  Image.cpp  Position.h  Triangle.h  Vertex.h  Zbuffer.h  main.cpp  utils.h
